--- a/Bookish.Web/Views/Home/Index.cshtml
+++ b/Bookish.Web/Views/Home/Index.cshtml
@@ -2,38 +2,19 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p>
-        <a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a>
-    </p>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p>
-            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a>
-        </p>
+<form id="login_form" class="form_class" action="Home/Books" method="post" style="background-color: lightgrey; border-radius: 10px; margin: 2rem; padding: 1rem;">
+    <div class="form_div" style="padding: 2rem;">
+        <label style="padding-bottom: 1rem">Login:</label>
+        <input class="field_class" name="login_txt" type="text" placeholder="Username" autofocus>
+        <br/>
+        <label>Password:</label>
+        <input id="pass" class="field_class" name="password_txt" type="password" placeholder="Password">
+        <br/>
+        <button class="submit_class" type="submit" form="login_form" onclick="return validateLogin()">Login</button>
+        <br/>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p>
-            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a>
-        </p>
+    <div class="info_div">
+        <p>You don't have an account? <a href="Home/Register">Register!</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p>
-            <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a>
-        </p>
-    </div>
-</div>
+</form>
