--- a/Bookish.Web/Views/Shared/_Layout.cshtml
+++ b/Bookish.Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,10 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("Books", "Books", "Home")</li>
+                <li>@Html.ActionLink("Account", "Account", "Home")</li>
+                <li>@Html.ActionLink("Register", "Register", "Home")</li>
+                <li>@Html.ActionLink("Add book", "AddBook", "Home")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
