--- a/Bookish.Web/Views/Home/AddBook.cshtml
+++ b/Bookish.Web/Views/Home/AddBook.cshtml
@@ -14,6 +14,11 @@
         <br/>
         <label>ISBN:</label>
         <input class="field_class" name="isbn" type="text" required>
+        <label>Description:</label>
+        <input class="field_class" name="description" type="text" >
+        <label>Image link:</label>
+        <input class="field_class" name="imageLink" type="text" >
+        
         <br/>
         <input type="radio" id="Paper" name="booktype" value="Paper" checked><label for="Paper">Paper</label>
         <input type="radio" id="Audio" name="booktype" value="Audio"><label for="Audio">Audio</label>
